@@ -1,3 +1,9 @@
+2004-10-11  Robert Wruck  <wruck@tweerlei.de>
+
+        * include/ddk/winddk.h (IoReleaseRemoveLockAndWait): Fix
+        definition
+        (IoReleaseRemoveLock): Add definition.
+
 2004-10-10  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* include/ddk/winnt4.h (Exi386InterlockedDecrementLong,
